# skybound

./: .gitignore  AGENTS.md  Cargo.toml  Craft.tscn  Food.tscn  FoodSpawn.gd  GPT.gd  aurship.blend  aurship.blend1  aurshipold.blend  creatures.blend  creatures.blend1  free_look_camera.gd  icon.svg.import  justfile  main.tscn  project.godot  rust-toolchain.toml  shell.nix  skywhale.blend  skywhale.blend1  todo
.cargo/: config.toml
assets/shaders/: clouds.wgsl  clouds_composite.wgsl  perlin_worley_compute.wgsl  world_rendering.wgsl
crates/shaders/raymarch/: Cargo.toml
crates/shaders/raymarch/src/: aur_ocean.rs  clouds.rs  lib.rs  lighting.rs  poles.rs  raymarch.rs  raymarch_solids.rs  sky.rs  utils.rs  volumetrics.rs
crates/shaders/raymarch/src/solids/: aur_spikes.rs  mod.rs  ships.rs
crates/shaders/raymarch/src/volumetrics/: aur_ocean.rs  clouds.rs  mod.rs  poles.rs
crates/skybound/: Cargo.toml  build.rs
crates/skybound/src/: camera.rs  debugtext.rs  main.rs  show_prepass.rs  show_prepass.wgsl  world.rs
crates/skybound/src/render/: mod.rs  raymarch.rs
crates/skybound/src/render/noise/: mod.rs  simplex.rs  utils.rs  worley.rs
crates/skybound/src/render/shaders/: clouds.wgsl  poles.wgsl  raymarch.wgsl  rendering.wgsl  sky.wgsl  utils.wgsl  volumetrics.wgsl
crates/skybound/src/ships/: mod.rs  physics.rs  player.rs  render_pass.rs
crates/skybound_shared/: Cargo.toml
crates/skybound_shared/src/: lib.rs
godot/: Craft.tscn  FoodSpawn.gd  Main.tscn  RaymarchMaterial.tres  RaymarchShader.gdshader  debug_node.tres  project.godot  skybound.gdextension
godot/Entity/: Entity.gd  Entity.tscn
rust/: Cargo.toml  todo.md
rust/src/: craft.rs  entity.rs  gpt.rs  lib.rs  vec3.rs
rust/src/entity/: cut.rs  mod.rs  physics.rs  render.rs
rust/src/raymarch/: mod.rs
src/: camera.rs  clouds.rs  debugtext.rs  fpscounter.rs  main.rs  wind.rs  world.rs
src-new/: main.rs
src/render/: clouds.rs  composite.rs  mod.rs  overview.md  raymarch.rs  volumetrics.rs
src/render/noise/: mod.rs  simplex.rs  utils.rs  worley.rs
src/render/shaders/: aur_fog.wgsl  aur_ocean.wgsl  clouds.wgsl  composite.wgsl  raymarch.wgsl  rendering.wgsl  sky.wgsl  utils.wgsl  volumetrics.wgsl
src/world_rendering/: aur_fog.wgsl  composite.rs  froxels.rs  functions.wgsl  mod.rs  perlin_worley_compute.rs  perlinworley.rs  poles.wgsl  volumetrics.rs
src/world_rendering/noise/: curl.rs  mod.rs  perlin.rs  simplex.rs  utils.rs  worley.rs
src/world_rendering/shaders/: aur_fog.wgsl  clouds.wgsl  froxels.wgsl  functions.wgsl  poles.wgsl  raymarch.wgsl  sky.wgsl  utils.wgsl  world_rendering.wgsl  world_rendering_composite.wgsl  world_rendering_froxels.wgsl
