[package]
name = "skybound"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = [
    "dynamic_linking", # Don't enable when building for release
    "wayland",

    "std",
    "async_executor",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_log",
    "bevy_window",
    "bevy_render",
    "bevy_ui",
    "bevy_ui_render",
    "default_font",
    "hdr",
    "multi_threaded",
    "tonemapping_luts",
    "zstd_rust",

    "debug",
] }
bytemuck = "1.23.2"
image = { version = "0.25.6", default-features = false, features = ["png"] }
rand = "0.9.2"
rayon = "1.11.0"
wgpu-types = "26.0.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
must_use_candidate = "allow"
suboptimal_flops = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
many_single_char_names = "allow"
inline_always = "allow"
too-many-lines = "allow"
too-many-arguments = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
