[workspace]
resolver = "2"
members = [
    "crates/skybound",
    "crates/skybound_shared",
    "crates/shaders/raymarch",
]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
must_use_candidate = "allow"
suboptimal_flops = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
many_single_char_names = "allow"
inline_always = "allow"
too-many-lines = "allow"
too-many-arguments = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
