[workspace]
resolver = "2"
members = [
    "crates/skybound",
    "crates/skybound_shared",
    "crates/shaders/raymarch",
]

[workspace.lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(target_arch, values("spirv"))',
] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
must_use_candidate = "allow"
suboptimal_flops = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
many_single_char_names = "allow"
inline_always = "allow"
too-many-lines = "allow"
too-many-arguments = "allow"
needless_range_loop = "allow"

[profile.release]
incremental = true
codegen-units = 256
lto = true

[profile.release.build-override]
opt-level = 3
incremental = true
codegen-units = 256

[profile.dev]
opt-level = 1
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
