[package]
name = "skybound"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
anyhow = "1.0"
# smol = "1.3"
# ureq = "2.7"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# dotenv = "0.15"
rayon = "1.8"
