[package]
name = "skybound"
version = "0.1.0"
edition = "2024"

[dependencies]
skybound_shared = { path = "../skybound_shared", features = ["cpu"] }
bevy = { git = "https://github.com/bevyengine/bevy", rev = "a74ad33a05ab1b37316fb53559ef7b24ae83b806", default-features = false, features = [
    "wayland",

    "std",
    "async_executor",
    "bevy_anti_alias",
    "dlss",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_log",
    "bevy_post_process",
    "bevy_window",
    "bevy_render",
    "shader_format_spirv",
    "bevy_ui",
    "bevy_ui_render",
    "default_font",
    "hdr",
    "multi_threaded",
    "tonemapping_luts",
    "zstd_rust",
] }
bytemuck = "1.25.0"
image = { version = "0.25.10", default-features = false, features = ["png"] }
rand = "0.10.1"
rayon = "1.12.0"
clap = { version = "4.6.1", features = ["derive"] }

[build-dependencies]
spirv-builder = { version = "0.10.0-alpha.1" }

[lints]
workspace = true
