[package]
name = "skybound_shared"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { version = "0.32.1", default-features = false, features = ["bytemuck"] }
bytemuck = { version = "1.25.0", features = ["derive"], optional = true }
encase = { version = "0.12.0", optional = true }

[features]
default = []
cpu = ["bytemuck", "encase", "glam/std"]
gpu = []

[lints]
workspace = true
