[package]
name = "skybound_shared"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { version = "0.32.1", default-features = false, features = ["bytemuck"] }
bevy = { git = "https://github.com/bevyengine/bevy", rev = "a74ad33a05ab1b37316fb53559ef7b24ae83b806", default-features = false, optional = true }

[features]
default = []
cpu = ["bevy", "glam/std"]
gpu = []

[lints]
workspace = true
