[package]
name = "raymarch_shader"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib", "lib"]

[dependencies]
spirv-std = { version = "0.10.0-alpha.1" }
bytemuck = { version = "1.25.0", features = ["derive"] }
skybound_shared = { path = "../../skybound_shared", features = ["gpu"] }

[lints]
workspace = true
